--- a/PizzaMenu/index.html
+++ b/PizzaMenu/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0" name="viewport">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
@@ -15,6 +15,7 @@
 <title>Natallica's Pizzeria</title>
 
 <h1>Natallica's Pizzeria!</h1>
+<br>
 
 <!-- Pie Size-->
 <form id="frmMenu">
@@ -87,6 +88,7 @@
 </div><br>
 </form>
 </div>
+<br>
 <!-- /Veggies Checklist-->
 
 <div class="controls">
